--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple app to store and sort your personal learnings",
   "scripts": {
     "start": "ts-node src/bin/www.ts",
+    "dev": "nodemon --exec ts-node src/bin/www.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matt Megarry",
@@ -18,6 +19,7 @@
     "@types/morgan": "^1.7.37",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2"
   }
 }
