--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,10 @@
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.11.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
