--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "pg": "^7.16.0",
