User can login (receive JWT given correct credentials)

--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -9,6 +9,6 @@
   "migrations": ["src/migration/**/*.ts"],
   "subscribers": ["src/subscriber/**/*.ts"],
   "logging": true,
-  "dropSchema": true,
+  "dropSchema": false,
   "synchronize": true
 }
