--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
